--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,14 @@
     margin-top: 4rem !important;
     margin-bottom: 6rem !important;
 }
+
+@keyframes scale-up-top {
+    0% {
+        transform: scale(0.5);
+        transform-origin: 50% 0;
+    }
+    100% {
+        transform: scale(1);
+        transform-origin: 50% 0;
+    }
+}
