useeffect colore di sfondo pagina

--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,9 @@
     width: 30px;
 }
 
-.backGround-color {
+/* .backGround-color {
     background-color: #2b3035;
-}
+} */
 
 /* input-width above the cards  */
 .max-width {
